--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ plugins/android.json
 plugins/ios.json
 $RECYCLE.BIN/
 
+src/config/firebase.config.ts
+
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
