--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "RoutinesApp-v4",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "Antonio Angosto Magdaleno",
+  "homepage": "https://github.com/aam-antonio",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "ng:serve": "ng serve",
+    "ng:build:prod": "ng build --prod",
+    "run:android": "ionic cordova run android",
+    "run:android:prod": "ionic cordova run android --prod"
   },
   "private": true,
   "dependencies": {
@@ -23,7 +21,7 @@
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
-    "@ionic/angular": "4.0.0-beta.7",
+    "@ionic/angular": "4.0.0-beta.8",
     "@ionic/pro": "2.0.3",
     "core-js": "^2.5.3",
     "rxjs": "6.2.2",
@@ -56,5 +54,5 @@
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
   },
-  "description": "An Ionic project"
+  "description": "Routines app project"
 }
