--- a/package.json
+++ b/package.json
@@ -11,34 +11,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~6.1.1",
-    "@angular/core": "~6.1.1",
-    "@angular/forms": "~6.1.1",
-    "@angular/http": "~6.1.1",
-    "@angular/platform-browser": "~6.1.1",
-    "@angular/platform-browser-dynamic": "~6.1.1",
-    "@angular/router": "~6.1.1",
+    "@angular/animations": "^6.1.7",
+    "@angular/common": "~6.1.7",
+    "@angular/core": "~6.1.7",
+    "@angular/fire": "^5.0.0",
+    "@angular/forms": "~6.1.7",
+    "@angular/http": "~6.1.7",
+    "@angular/platform-browser": "~6.1.7",
+    "@angular/platform-browser-dynamic": "~6.1.7",
+    "@angular/router": "~6.1.7",
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
+    "@ionic-native/sqlite": "^4.12.2",
     "@ionic-native/status-bar": "5.0.0-beta.15",
     "@ionic/angular": "4.0.0-beta.8",
     "@ionic/pro": "2.0.3",
+    "cordova-sqlite-storage": "^2.4.0",
     "core-js": "^2.5.3",
+    "firebase": "^5.4.2",
+    "moment": "^2.22.2",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "~6.1.1",
-    "@angular/compiler": "~6.1.1",
-    "@angular/compiler-cli": "~6.1.1",
-    "@angular/language-service": "~6.1.1",
-    "@angular-devkit/architect": "~0.7.2",
-    "@angular-devkit/build-angular": "~0.7.2",
-    "@angular-devkit/core": "~0.7.2",
-    "@angular-devkit/schematics": "~0.7.2",
-    "@ionic/ng-toolkit": "^1.0.0",
-    "@ionic/schematics-angular": "^1.0.0",
-    "@types/jasmine": "~2.8.6",
+    "@angular/cli": "~6.2.1",
+    "@angular/compiler": "~6.1.7",
+    "@angular/compiler-cli": "~6.1.7",
+    "@angular/language-service": "~6.1.7",
+    "@angular-devkit/architect": "~0.8.1",
+    "@angular-devkit/build-angular": "~0.8.1",
+    "@angular-devkit/core": "~0.8.1",
+    "@angular-devkit/schematics": "~0.8.1",
+    "@ionic/ng-toolkit": "^1.0.8",
+    "@ionic/schematics-angular": "^1.0.6",
+    "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.9.2",
     "codelyzer": "~4.4.2",
@@ -54,5 +60,10 @@
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
   },
-  "description": "Routines app project"
+  "description": "Routines app project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {}
+    }
+  }
 }
