--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ionic-native/status-bar": "5.0.0-beta.15",
     "@ionic/angular": "4.0.0-beta.8",
     "@ionic/pro": "2.0.3",
+    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
     "cordova-sqlite-storage": "^2.4.0",
     "core-js": "^2.5.3",
     "firebase": "^5.4.2",
