Updated ionic and angular to latest versions

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,5 @@
 {
   "name": "RoutinesApp-v4",
-  "integrations": {
-    "cordova": {}
-  },
-  "type": "angular",
-  "pro_id": "e7467a8c"
+  "integrations": {},
+  "type": "angular"
 }
