--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "RoutinesApp-v4",
+  "name": "RoutinesAppV4",
   "version": "0.0.1",
-  "author": "Antonio Angosto Magdaleno",
-  "homepage": "https://github.com/aam-antonio",
+  "author": "Ionic Framework",
+  "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng:serve": "ng serve",
     "ng:build:prod": "ng build --prod",
@@ -11,61 +11,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.8",
-    "@angular/common": "~6.1.8",
-    "@angular/core": "~6.1.8",
-    "@angular/fire": "^5.0.2",
-    "@angular/forms": "~6.1.8",
-    "@angular/http": "~6.1.8",
-    "@angular/platform-browser": "~6.1.8",
-    "@angular/platform-browser-dynamic": "~6.1.8",
-    "@angular/router": "~6.1.8",
-    "@ionic-native/core": "5.0.0-beta.20",
-    "@ionic-native/splash-screen": "5.0.0-beta.20",
-    "@ionic-native/sqlite": "^4.12.2",
-    "@ionic-native/status-bar": "5.0.0-beta.20",
-    "@ionic/angular": "4.0.0-beta.11",
-    "@ionic/pro": "2.0.3",
-    "@ngx-translate/core": "^10.0.2",
-    "@ngx-translate/http-loader": "^3.0.1",
-    "cordova-sqlite-storage": "^2.4.0",
-    "core-js": "^2.5.3",
-    "firebase": "^5.5.1",
-    "moment": "^2.22.2",
-    "rxjs": "6.2.2",
-    "zone.js": "^0.8.26"
+    "@angular/common": "^7.2.2",
+    "@angular/core": "^7.2.2",
+    "@angular/fire": "^5.1.1",
+    "@angular/forms": "^7.2.2",
+    "@angular/http": "^7.2.2",
+    "@angular/platform-browser": "^7.2.2",
+    "@angular/platform-browser-dynamic": "^7.2.2",
+    "@angular/router": "^7.2.2",
+    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/status-bar": "^5.0.0",
+    "@ionic/angular": "^4.0.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "core-js": "^2.5.4",
+    "firebase": "^5.8.2",
+    "moment": "^2.24.0",
+    "rxjs": "~6.3.3",
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular/cli": "~6.2.3",
-    "@angular/compiler": "~6.1.8",
-    "@angular/compiler-cli": "~6.1.8",
-    "@angular/language-service": "~6.1.8",
-    "@angular-devkit/architect": "~0.8.3",
-    "@angular-devkit/build-angular": "~0.8.3",
-    "@angular-devkit/core": "~0.8.3",
-    "@angular-devkit/schematics": "~0.8.3",
-    "@ionic/ng-toolkit": "^1.0.8",
-    "@ionic/schematics-angular": "^1.0.6",
+    "@angular-devkit/architect": "~0.12.3",
+    "@angular-devkit/build-angular": "~0.12.3",
+    "@angular-devkit/core": "~7.2.3",
+    "@angular-devkit/schematics": "~7.2.3",
+    "@angular/cli": "~7.2.3",
+    "@angular/compiler": "~7.2.2",
+    "@angular/compiler-cli": "~7.2.2",
+    "@angular/language-service": "~7.2.2",
+    "@ionic/angular-toolkit": "~1.3.0",
+    "@types/node": "~10.12.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.11.0",
-    "codelyzer": "~4.4.4",
+    "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~3.1.4",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "ts-node": "~8.0.0",
+    "tslint": "~5.12.0",
+    "typescript": "~3.1.6"
   },
-  "description": "Routines app project",
-  "cordova": {
-    "plugins": {
-      "cordova-sqlite-storage": {}
-    }
-  }
+  "description": "An Ionic project"
 }
