--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ng:serve": "ng serve",
     "ng:build:prod": "ng build --prod",
+    "build:android": "ionic cordova build android",
     "run:android": "ionic cordova run android",
     "run:android:prod": "ionic cordova run android --prod"
   },
@@ -20,13 +21,15 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/google-plus": "^5.1.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "cordova-android": "7.1.4",
+    "cordova-android": "8.0.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-googleplus": "7.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -74,7 +77,12 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.761339947853-62655f4fvh8efej0jutv2hiag6onq7t0",
+        "WEB_APPLICATION_CLIENT_ID": "761339947853-057pk15s172itq4c7qcnoo2c1ba7nj0n.apps.googleusercontent.com",
+        "PLAY_SERVICES_VERSION": "11.8.0"
+      }
     },
     "platforms": [
       "android"
